Fix the close button when using stock bootstrap styles; more cleanup; fix closing animation on mobile

--- a/src/themes/bootstrap/styles.scss
+++ b/src/themes/bootstrap/styles.scss
@@ -184,97 +184,6 @@ $close-text-shadow:                 0 1px 0 $white !default;
   }
 }
 
-@-webkit-keyframes dialog-slide-in {
-  0% {
-    transform: translate(0, -25%);
-  }
-
-  100% {
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes dialog-slide-in {
-  0% {
-    transform: translate(0, -25%);
-  }
-
-  100% {
-    transform: translate(0, 0);
-  }
-}
-
-@-webkit-keyframes dialog-slide-out {
-  0% {
-    transform: translate(0, 0);
-  }
-
-  100% {
-    transform: translate(0, -25%);
-  }
-}
-
-@keyframes dialog-slide-out {
-  0% {
-    opacity: 1;
-    transform: translate(0, 0);
-  }
-
-  100% {
-    opacity: 0;
-    transform: translate(0, -25%);
-  }
-}
-
-@-webkit-keyframes backdrop-fade-in {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: $modal-backdrop-opacity;
-  }
-}
-
-@keyframes backdrop-fade-in {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: $modal-backdrop-opacity;
-  }
-}
-
-@-webkit-keyframes backdrop-fade-out {
-  0% {
-    opacity: $modal-backdrop-opacity;
-  }
-
-  100% {
-    opacity: 0;
-  }
-}
-
-@keyframes backdrop-fade-out {
-  0% {
-    opacity: $modal-backdrop-opacity;
-  }
-
-  100% {
-    opacity: 0;
-  }
-}
-
-.fade {
-  opacity: 0;
-  @include transition($transition-fade);
-
-  &.show {
-    opacity: 1;
-  }
-}
-
 // Kill the scroll on the body
 .modal-open {
   overflow: hidden;
@@ -442,9 +351,7 @@ $close-text-shadow:                 0 1px 0 $white !default;
   color: $close-color;
   text-shadow: $close-text-shadow;
   opacity: .5;
-  &:before {
-    content: '×';
-  }
+  cursor: pointer;
 
   @include hover-focus {
     color: $close-color;
